--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -1,15 +1,33 @@
 <section id="properties" class="properties section">
+
   <div class="container" data-aos="fade-up" data-aos-delay="100">
+
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
+        <app-property-filter-bar [filter]="filter()" (filterChange)="onFilterPatch($event)">
+
+        </app-property-filter-bar>
+
+        <app-property-active-filter-bar [filter]="filter()" (remove)="onFilterPatch($event)" (clearAll)="onClearAll()">
+
+        </app-property-active-filter-bar>
+
+        <app-properties-sidebar (filterChange)="onFilterPatch($event)"></app-properties-sidebar>
+
+      </div>
+
+      <div class="col-lg-12">
         <app-properties-header></app-properties-header>
-        <app-properties-grid [filter] = "filter()"></app-properties-grid>
+        <app-properties-grid [filter]="filter()"></app-properties-grid>
+
         <app-properties-list></app-properties-list>
+
         <app-pagination></app-pagination>
+
       </div>
-      <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-        <app-properties-sidebar (filterChange)="onFilterChanged($event)"></app-properties-sidebar>
-      </div>
+
     </div>
+
   </div>
+
 </section>
