--- a/src/app/components/property-amenities/property-amenities.component.html
+++ b/src/app/components/property-amenities/property-amenities.component.html
@@ -1,27 +1,18 @@
 <div class="property-amenities" data-aos="fade-up" data-aos-delay="400">
   <h3>Amenities &amp; Features</h3>
-  <div class="row">
-    <div class="col-md-6">
-      <h4>Interior Features</h4>
-      <ul class="features-list">
-        <li><i class="bi bi-check-circle"></i>Hardwood Floors</li>
-        <li><i class="bi bi-check-circle"></i>Updated Kitchen</li>
-        <li><i class="bi bi-check-circle"></i>Walk-in Closets</li>
-        <li><i class="bi bi-check-circle"></i>Central Air Conditioning</li>
-        <li><i class="bi bi-check-circle"></i>Fireplace</li>
-        <li><i class="bi bi-check-circle"></i>High Ceilings</li>
-      </ul>
+
+  @if (amenities().length === 0) {
+    <p class="text-muted mb-0">No amenities specified.</p>
+  } @else {
+    <div class="row">
+      @for (a of amenities(); track a.key) {
+        <div class="col-md-6 mb-2">
+          <div class="d-flex align-items-center gap-2">
+            <i class="bi" [class]="a.icon"></i>
+            <span>{{ a.label }}</span>
+          </div>
+        </div>
+      }
     </div>
-    <div class="col-md-6">
-      <h4>Exterior Features</h4>
-      <ul class="features-list">
-        <li><i class="bi bi-check-circle"></i>2-Car Garage</li>
-        <li><i class="bi bi-check-circle"></i>Swimming Pool</li>
-        <li><i class="bi bi-check-circle"></i>Garden</li>
-        <li><i class="bi bi-check-circle"></i>Patio/Deck</li>
-        <li><i class="bi bi-check-circle"></i>Security System</li>
-        <li><i class="bi bi-check-circle"></i>Sprinkler System</li>
-      </ul>
-    </div>
-  </div>
+  }
 </div>
