--- a/src/app/components/property-details/property-details.component.html
+++ b/src/app/components/property-details/property-details.component.html
@@ -1,29 +1,39 @@
 <section id="property-details" class="property-details section">
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row gy-4">
-      <div class="col-lg-8">
-        <!-- Property Gallery -->
-        <app-property-gallery></app-property-gallery>
-        <!-- End Property Gallery -->
 
-        <!-- Property Description -->
-        <app-property-description></app-property-description>
-        <!-- End Property Description -->
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <!-- Amenities -->
-        <app-property-amenities></app-property-amenities>
-        <!-- End Amenities -->
+        <div class="row gy-4">
 
-        <!-- Map Section -->
-        <app-property-map></app-property-map>
-        <!-- End Map Section -->
+          <div class="col-lg-8">
+
+            <!-- Property Gallery -->
+            <app-property-gallery [room] ="room()!"></app-property-gallery>
+            <!-- End Property Gallery -->
+
+            <!-- Property Description -->
+            <app-property-description [room] ="room()!"></app-property-description>
+            <!-- End Property Description -->
+
+            <!-- Amenities -->
+            <app-property-amenities [room] ="room()!"></app-property-amenities>
+            <!-- End Amenities -->
+
+            <!-- Map Section -->
+            <app-property-map [room] ="room()!"></app-property-map>
+            <!-- End Map Section -->
+
+          </div>
+
+          <div class="col-lg-4">
+
+            <!-- Property Overview -->
+            <app-property-overview [room] ="room()!"></app-property-overview>
+            <!-- End Property Overview -->
+
+          </div>
+
+        </div>
+
       </div>
 
-      <div class="col-lg-4">
-        <!-- Property Overview -->
-        <app-property-overview></app-property-overview>
-        <!-- End Property Overview -->
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
